--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	 <link rel="stylesheet" type="text/css" href="
-	 estilo.css">
-	 <link rel="stylesheet" type="text/css" href="posicion.css">
-	 <script type="text/javascript" src=funsiones.js></script>
+	 proyecto final 2 de leonardo daniel torija jimenez/estilo.css">
+	 <link rel="stylesheet" type="text/css" href="proyecto final 2 de leonardo daniel torija jimenez/posicion.css">
+	 <script type="text/javascript" src=proyecto final 2 de leonardo daniel torija jimenez/funsiones.js></script>
 	<title>proyecto 2</title>
 </head>
 <body>
@@ -32,16 +32,16 @@
 				<input type="radio" name="radio-btn" id="radio4">
 
 				<div class="st first">
-					<img src="5.jpg">
+					<img src="proyecto final 2 de leonardo daniel torija jimenez/5.jpg">
 				</div>
 				<div class="st ">
-					<img src="6.jpg">
+					<img src="proyecto final 2 de leonardo daniel torija jimenez/6.jpg">
 				</div>
 				<div class="st ">
-					<img src="7.jpg">
+					<img src="proyecto final 2 de leonardo daniel torija jimenez/7.jpg">
 				</div>
 				<div class="st ">
-					<img src="8.jpg">
+					<img src="proyecto final 2 de leonardo daniel torija jimenez/8.jpg">
 				</div>
 
 				<div class="nav-auto">
@@ -63,7 +63,7 @@
 	<div class="contenedor">
 		<a href="#">
 			<figure id="black">
-				<img src="1.jpg">
+				<img src="proyecto final 2 de leonardo daniel torija jimenez/1.jpg">
 				<div class="capa">
 					<h3>El Drifting</h3>
 					<p>El drifting es una de las subdisciplinas del automovilismo que más rápido está creciendo, ya que los neumáticos humeantes y las alucinantes maniobras de conducción siguen fascinando a gente de todas las edades. Muchos jóvenes conocerán el drifting por las películas de The Fast and the Furious, pero como deporte de motor, se remonta mucho más atrás que la franquicia cinematográfica. En esta guía te explicamos todo lo que necesitas saber sobre el drifting.</p>
@@ -73,7 +73,7 @@
 		<div class="contenedor">
 		<a href="#">
 			<figure id="blak">
-				<img src="2.jpg">
+				<img src="proyecto final 2 de leonardo daniel torija jimenez/2.jpg">
 				<div class="capa">
 					<h3>El Drifting</h3>
 					<p>El drifting es una de las subdisciplinas del automovilismo que más rápido está creciendo, ya que los neumáticos humeantes y las alucinantes maniobras de conducción siguen fascinando a gente de todas las edades. Muchos jóvenes conocerán el drifting por las películas de The Fast and the Furious, pero como deporte de motor, se remonta mucho más atrás que la franquicia cinematográfica. En esta guía te explicamos todo lo que necesitas saber sobre el drifting.</p>
@@ -83,7 +83,7 @@
 		<div class="contenedor">
 		<a href="#">
 			<figure id="ey">
-				<img src="3.jpg">
+				<img src="proyecto final 2 de leonardo daniel torija jimenez/3.jpg">
 				<div class="capa">
 					<h3>El Drifting</h3>
 					<p>El drifting es una de las subdisciplinas del automovilismo que más rápido está creciendo, ya que los neumáticos humeantes y las alucinantes maniobras de conducción siguen fascinando a gente de todas las edades. Muchos jóvenes conocerán el drifting por las películas de The Fast and the Furious, pero como deporte de motor, se remonta mucho más atrás que la franquicia cinematográfica. En esta guía te explicamos todo lo que necesitas saber sobre el drifting.</p>
@@ -93,7 +93,7 @@
 		<div class="contenedor">
 		<a href="#">
 			<figure id="malo">
-				<img src="4.jpg">
+				<img src="proyecto final 2 de leonardo daniel torija jimenez/4.jpg">
 				<div class="capa">
 					<h3>El Drifting</h3>
 					<p>El drifting es una de las subdisciplinas del automovilismo que más rápido está creciendo, ya que los neumáticos humeantes y las alucinantes maniobras de conducción siguen fascinando a gente de todas las edades. Muchos jóvenes conocerán el drifting por las películas de The Fast and the Furious, pero como deporte de motor, se remonta mucho más atrás que la franquicia cinematográfica. En esta guía te explicamos todo lo que necesitas saber sobre el drifting.</p>
